Trying to fix flash message bug on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -122,6 +122,7 @@ nav i {
 
 .flash-message {
     font-family: Lato, Dancing Script Sans-serif;
+    margin: 20px 0 -20px 0;
     line-height: 2;
     font-weight: 700;
     color: #033F63;
